--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= link_to t(:back), {action: "index", controller: "projects"} %>
 <div class = "container well" >
     <p class="req"><%= t(:required) %></p>
-    <%= form_for @project, :html => {:class => "form-horizontal"} do |f| %>
+    <%= form_for @project, html: {class: "form-horizontal"} do |f| %>
       <% if @project.errors.any? %>
         <div id="error_explanation" class="req">
            <h2 class="req"><%= pluralize(@project.errors.count, "") %> <%= t(:prohibited_project_error) %></h2>
@@ -13,19 +13,19 @@
         </div>
       <% end %>
     <div class="control-group">
-        <%= f.label t(:name), :class => "control-label" %>
+        <%= f.label t(:name), class: "control-label" %>
         <div class="controls">
-          <%= f.text_field :name, :placeholder => t(:name), :id => "project_name"%>
+          <%= f.text_field :name, placeholder: t(:name), id: "project_name"%>
           <span class="req">* </span>
         </div>
     </div>
     <div class="control-group">
-      <%= f.label t(:categories), :class => "control-label" %>
+      <%= f.label t(:categories), class: "control-label" %>
       <div class="controls">
         <% if params[:action] == "new" %>
-          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {:prompt => true}, {:id =>"cat"}) %>
+          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {prompt: true}, {id:"cat"}) %>
         <% elsif params[:action] == "edit" %>
-          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {:prompt => @select_value, :selected => @project.category_id.to_i}, {:id =>"cat"}) %>
+          <%= f.collection_select(:category, Category.all, :id, :get_name_by_locale, {prompt: @select_value, selected: @project.category_id.to_i}, {id:"cat"}) %>
         <% end %>
     </div>
   </div>
@@ -49,15 +49,15 @@
       <span class="help-block"><%= t(:age) %></span>
       </label>
       <div class="controls d5pxup">
-          <%= f.text_field :minAge, :class => "input-small", :placeholder =>  t(:from), :id => "project_name"%>
-          <%= f.text_field :maxAge, :class => "input-small", :placeholder =>  t(:to), :id => "project_name" %>
+          <%= f.text_field :minAge, class: "input-small", placeholder:  t(:from), id: "project_name"%>
+          <%= f.text_field :maxAge, class: "input-small", placeholder:  t(:to), id: "project_name" %>
           <span class="req">* </span>
       </div>
   </div>
   <div class="control-group">
-      <%= f.label t(:desc), :class => "control-label" %>
+      <%= f.label t(:desc), class: "control-label" %>
       <div class="controls">
-          <%= f.text_area :description, :id => "desc" %>
+          <%= f.text_area :description, id: "desc" %>
       </div>
   </div>
   <div class="control-group">
