--- a/arability/app/views/projects/load_synonyms.js.erb
+++ b/arability/app/views/projects/load_synonyms.js.erb
@@ -9,6 +9,7 @@ update_synonym_list(synonym_names, synonym_ids);
 
 function update_synonym_list(synonym_names, synonym_ids){
 	if(synonym_names.length == 0){
+		$("#selected_synonym").html("");
 		document.getElementById("selected_synonym").disabled=true;
 	}
 	else {
