--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -112,6 +112,9 @@
     </div>
   </form> 
 <script type="text/javascript" charset="utf-8">
+  $("#selected_keyword").change(function (){
+    load_synonyms();
+  });
   $(".autocomplete").typeahead({
     source: fetch_keywords,
     items: 4,
@@ -131,7 +134,7 @@
   function add_keyword_with_synonym(){
     var keyword_name = $("#selected_keyword").val();
     var synonym_id = $("#selected_synonym option:selected").val();
-    if(keyword_name != "" && synonym_id != ""){
+    if(keyword_name != "" && synonym_id != undefined){
         $.ajax({
           type: "POST",
           url: "/developers/projects/"+"<%= @project.id %>"+"/quick_add",
