--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -104,19 +104,19 @@
   border-bottom-left-radius:6px;
 }
 
-.table1 .btn{
+.table1 .btn:not(.tutBtn){
   width: 51px;
   height: 35px;
 }
 
-.table1 td{
+.table1 td:not(.tutBtn){
   width: 40px;
   height: 40px;
   min-height: 50px;
   min-width: 50px;
 }
 
-.table1 tr{
+.table1 tr:not(.tutBtn){
   min-width: 50px;
   min-height: 50px;
 }
@@ -202,6 +202,7 @@ margin-left: 80px;
   height: 38px;
   padding-left:30px;
   margin-right: 50px;
+  border-radius: 10px;
 }
 
 #btn-restart{
@@ -209,6 +210,7 @@ margin-left: 80px;
   height: 29px;
   margin-right: 40px;
   line-height: 2;
+  border-radius: 10px;
 }
 
 #game-score{
@@ -365,13 +367,13 @@ margin-left: 80px;
   height:100%;
 }
 
-.table1 .btn{
+.table1 .btn:not(.tutBtn){
   width: 51px;
   height: 35px;
 }
 
 
-.table1 tr{
+.table1 tr:not(.tutBtn){
   min-width: 50px;
   min-height: 50px;
 }
@@ -458,8 +460,46 @@ margin-left: 80px;
   margin-right: 150px;
 }
 
-.table1 button{
+.table1 button:not(.tutBtn){
   width: 53px;
   height: 35px;
   border-radius: 10px;
+}
+
+.tutBtn{
+  width: 120px;
+  height:30px;
+  font-size: 20px;
+  color: white;
+}
+
+.popover-content button{
+  border-radius: 10px;
+}
+
+#list-div .popover{
+  width: 220px;
+}
+
+#list-div .popover button{
+  margin-left: 30px;
+}
+
+.label-div .popover button{
+  margin-left: 40px;
+  width: 100px;
+}
+
+td .popover{
+  top: -220px;
+  left: -99.5px;
+  width: 250px;
+}
+
+td .popover button{
+  margin-left: 40px;
+}
+
+.game-lang .popover button{
+  margin-left: 40px;
 }
